--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/registro/configuracion, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN] }
-        - { path: ^/dashboard, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN, ROLE_USER] }
-        - { path: ^/dashboard, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN, ROLE_USER] }
+        # - { path: ^/registro/configuracion, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN] }
+        # - { path: ^/dashboard, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN, ROLE_USER] }
+        # - { path: ^/dashboard, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN, ROLE_USER] }
+        - { path: ^/index, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/filter_idx, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/dashboard, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/admin, roles: IS_AUTHENTICATED_FULLY }
